--- a/estilos.css
+++ b/estilos.css
@@ -18,11 +18,12 @@
 
 .container{
 width: 90%;
+height: auto;
 max-width: 1200px;
 margin:0 auto;
-padding: 100px 0;
+padding-top: 50px;
 height: auto;
-overflow-x: hidden;
+overflow: hidden;
 }
 
 .container--modifier{
@@ -37,9 +38,12 @@ overflow-x: hidden;
 
 .nav__hero{
     color: #fff;
-    height: 70px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
 }
 
 .nav__container{
@@ -51,8 +55,7 @@ overflow-x: hidden;
 }
 
 .logo__name{
-    font-size: 24px;
-    
+    font-size: 25px;
 }
 
 .link{
@@ -60,8 +63,7 @@ overflow-x: hidden;
     color:inherit;
     text-decoration: none;
     font-weight: 300;
-    padding: 10px
-
+    padding: 10px;
 }
 
 .link:hover{
@@ -250,6 +252,7 @@ overflow-x: hidden;
     width: 49%;
     height: 290px;
     border-radius: 10px;
+    border: 1px solid
 }
 
 .background img{
@@ -260,9 +263,9 @@ overflow-x: hidden;
 }
 
 .background__text{
-    position: absolute;
-    width: 100%;
-    bottom: 30px;
+    position: relative;
+    width: 90%;
+    bottom: 100px;
     left: 15px;
     color: #fff;    
 }
@@ -276,7 +279,7 @@ overflow-x: hidden;
 .testimony .testimony__titulos1{
     width:90%;
     margin-left: 10%;
-
+    padding-top: 50px;
 }
 
 .testimony .container{
@@ -496,6 +499,7 @@ overflow-x: hidden;
     width: 100%;
     color: green;
     flex-wrap: wrap;
+    padding-bottom: 50px;
 }
 
 .download__logo{
@@ -577,6 +581,47 @@ overflow-x: hidden;
     .hero__textos{
         width: 80%;
     }
+    .newsletter__submit{
+        width: 40%;
+        font-size: 10px;
+        font-weight: bold;
+        padding: 0;
+    }
+    .newsletter__input{
+        font-size: 10px;
+        font-weight: bold;
+    }
+    .newsletter{
+        width: 100%;
+    }
+    .container-cards{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-flow: row wrap;
+    }
+    .container-cards .card{
+        width: 45%;
+    }
+    .contact{
+        display: flex;
+        flex-flow: column;
+    }
+    .contact .item__contact{
+        width: 100%;
+        height: auto;
+        padding: 5px;
+        margin-bottom: 2px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .contact .contact__title{
+        padding-left: 10px;
+    }
+    .contact .contact__title:hover{
+        border-bottom: 1px solid #f0f;
+    }
 }
 
 @media (max-width: 700px) {
@@ -600,9 +645,39 @@ overflow-x: hidden;
         width: 70%;
     }
 }
+
 @media (max-width: 500px) {
     .hero__main{
         display: block;
     }
-
+    .mockup{
+        margin: 40px 0;
+    }
+    .container-cards .card{
+        width: 80%;
+    }
+    .container-bg .card{
+        width: 80%;
+    }
+    .container-bg .background{
+        width: 80%;
+        margin-bottom: 50px;
+    }
+    .footer__caption{
+        flex-flow: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .download__app{
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-flow: column;
+        text-align: center;
+    }
+    .get-email{
+        width: 80%;
+        margin-bottom: 30px;
+    }
 }
